# SWARMz4

./: .gitignore  .gitmodules  README.md  README_old.md  README_reglement.md  SWARMz Cup 20242025.docx  swarmz_readme.md
Docker/: Dockerfile  QGroundControl.ini  README.md  docker-compose-nvidia.yml  docker-compose.yml
custom_files/models/wam-v2/: model.sdf
custom_files/models/wam-v2/meshes/: gr.dae  gun.dae  warship.dae
custom_files/worlds/: simulation_water.sdf  swarmz_world.sdf
docs/: kamikaze_service.md
install_scripts/: add_mavlink_port.sh  check_swarmz_path.sh  install_Micro-XRCE.sh  install_PX4.sh  install_QGround_Control.sh  install_custom_files.sh  install_requirements.sh  install_ros2.sh  install_swarmz.sh  set_gazebo_path.sh
launch_scripts/: create_world_water.py  launch_game.sh  launch_game_old.sh  launch_game_tmux.sh  launch_game_w_servers.sh  launch_simulation.sh  mavlink_commands.py  old_launch_game.sh  px4_reset_sensors.sh  swarmz_tmux.conf  tmux_demo.sh  world.py
launch_scripts/archive/: launch_game_old.sh  swarmz_world_old.sdf  test_gpu_detection.sh  test_mavlink.py
results/: game_results.txt
results/individual_games/: game_results_20250507_142244.txt  game_results_20250521_172101.txt  game_results_20250522_171227.txt  game_results_20250523_091410.txt  game_results_20250523_092818.txt  game_results_20250523_112739.txt  game_results_20250523_121706.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/example_global_navigation_cpp/lib/example_global_navigation_cpp/: example_global_navigation
ros2_ws/install/example_global_navigation_cpp/share/example_global_navigation_cpp/: local_setup.sh  package.sh
ros2_ws/install/example_local_navigation_cpp/lib/example_local_navigation_cpp/: example_local_navigation
ros2_ws/install/example_local_navigation_cpp/share/example_local_navigation_cpp/: package.sh
ros2_ws/install/example_mode_fw_attitude_cpp/lib/example_mode_fw_attitude_cpp/: example_mode_fw_attitude
ros2_ws/install/example_mode_fw_attitude_cpp/share/example_mode_fw_attitude_cpp/: package.sh
ros2_ws/install/example_mode_goto_cpp/lib/example_mode_goto_cpp/: example_mode_goto
ros2_ws/install/example_mode_goto_cpp/share/example_mode_goto_cpp/: package.sh
ros2_ws/install/example_mode_goto_global_cpp/lib/example_mode_goto_global_cpp/: example_mode_goto_global
ros2_ws/install/example_mode_goto_global_cpp/share/example_mode_goto_global_cpp/: local_setup.sh  package.sh
ros2_ws/install/example_mode_manual_cpp/lib/example_mode_manual_cpp/: example_mode_manual
ros2_ws/install/example_mode_manual_cpp/share/example_mode_manual_cpp/: local_setup.sh  package.sh
ros2_ws/install/example_mode_rtl_replacement_cpp/lib/example_mode_rtl_replacement_cpp/: example_mode_rtl
ros2_ws/install/example_mode_rtl_replacement_cpp/share/example_mode_rtl_replacement_cpp/: package.sh
ros2_ws/install/example_mode_with_executor_cpp/lib/example_mode_with_executor_cpp/: example_mode_with_executor
ros2_ws/install/example_mode_with_executor_cpp/share/example_mode_with_executor_cpp/: local_setup.sh  package.sh
ros2_ws/install/flag_ship/share/flag_ship/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/game_master/lib/game_master/: game_master_client_node  game_master_node  kamikaze_server  missile_server
ros2_ws/install/game_master/share/game_master/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/offboard_control_cpp/lib/offboard_control_cpp/: offboard_control
ros2_ws/install/offboard_control_cpp/share/offboard_control_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/offboard_control_py/lib/offboard_control_py/: mission_control  offboard_control  offboard_control_goto  simu_circle  simu_processes  tight_circle
ros2_ws/install/offboard_control_py/share/offboard_control_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/px4_gz_bridge/share/px4_gz_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
ros2_ws/install/px4_offboard_position/share/px4_offboard_position/: package.bash  package.sh  package.zsh
ros2_ws/install/px4_offboard_velocity/lib/px4_offboard_velocity/: control  offboard_control  processes  velocity_control  visualizer
ros2_ws/install/px4_offboard_velocity/share/px4_offboard_velocity/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/px4_pkgs/px4_controllers/offboard_control_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/px4_pkgs/px4_controllers/offboard_control_cpp/include/: offboard_control_classic.hpp  offboard_control_frd.hpp  offboard_control_goto.hpp  offboard_control_ned.hpp
ros2_ws/src/px4_pkgs/px4_controllers/offboard_control_cpp/missions/: mission.yaml
ros2_ws/src/px4_pkgs/px4_controllers/offboard_control_cpp/src/: offboard_control.cpp  offboard_control_classic.cpp  offboard_control_frd.cpp  offboard_control_goto.cpp  offboard_control_ned.cpp
ros2_ws/src/px4_pkgs/px4_controllers_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/px4_pkgs/px4_controllers_interfaces/action/: GotoPosition.action
ros2_ws/src/px4_pkgs/px4_controllers_interfaces/msg/: PointYaw.msg
ros2_ws/src/px4_pkgs/px4_controllers_interfaces/srv/: SetVelocities.srv
ros2_ws/src/px4_pkgs/px4_gz_bridge/: README.md  setup.cfg  setup.py
ros2_ws/src/swarmz_pkgs/boat_pkgs/: README.MD
ros2_ws/src/swarmz_pkgs/flag_ship/: setup.cfg  setup.py
ros2_ws/src/swarmz_pkgs/game_master/: README.md  old_README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/swarmz_pkgs/swarmz_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/swarmz_pkgs/swarmz_interfaces/msg/: Detection.msg  GameState.msg  RobotState.msg
ros2_ws/src/swarmz_pkgs/swarmz_interfaces/srv/: UpdateHealth.srv
stand_alone_gazebo/: spawn_drones.sh  spawn_drones_2.sh  spawn_drones_3.sh  test.sh
(+220 files in other folders)
